[package]
name = "vtubing"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.29.2"
anyhow = { version = "1.0.93", default-features = false }
rscam = { version = "0.5.5", default-features = false }
memmap2 = { version = "0.9.5", default-features = false }
rusty-yunet = { version = "*", path = "../../rusty-yunet", default-features = false }
image = { version = "0.23", default-features = false }