[package]
name = "vtubing"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29.2" }
rscam = { version = "0.5.5", default-features = false }
memmap2 = { version = "0.9.5", default-features = false }
rusty-yunet = { version = "*", path = "../../rusty-yunet", default-features = false }
